[gd_scene load_steps=4 format=2]

[ext_resource path="res://battle/BaseClass/Resources/monster_5.png" type="Texture" id=1]
[ext_resource path="res://battle/BaseClass/Unit_Base_V2.gd" type="Script" id=2]
[ext_resource path="res://battle/BaseClass/Resources/selection.png" type="Texture" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MonsterContainer" type="GridContainer" parent="."]
margin_right = 204.0
margin_bottom = 150.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Unit" type="TextureButton" parent="MonsterContainer"]
margin_right = 150.0
margin_bottom = 150.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 1 )
texture_focused = ExtResource( 3 )

[node name="Container" type="CenterContainer" parent="MonsterContainer"]
margin_left = 154.0
margin_right = 224.0
margin_bottom = 150.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="MonsterContainer/Container"]
margin_top = 65.0
margin_right = 70.0
margin_bottom = 85.0
rect_min_size = Vector2( 70, 20 )
color = Color( 0.0352941, 0.215686, 0.0196078, 1 )

[node name="UnitStats" type="GridContainer" parent="MonsterContainer/Container"]
margin_left = 10.0
margin_top = 68.0
margin_right = 60.0
margin_bottom = 82.0
columns = 2

[node name="HP_label" type="Label" parent="MonsterContainer/Container/UnitStats"]
margin_right = 22.0
margin_bottom = 14.0
text = "HP:"

[node name="HP_value" type="Label" parent="MonsterContainer/Container/UnitStats"]
margin_left = 26.0
margin_right = 50.0
margin_bottom = 14.0
text = "500"

[connection signal="pressed" from="MonsterContainer/Unit" to="." method="_on_Unit_pressed"]
